src/components/Listing/TagBar/TagBar.sass
@import 'variables.sass'

.tagbar
  display: flex
  justify-content: space-between
  background: $color-gray-14
  padding: $space-3
  border-bottom: 1px solid $color-gray-10

  & > *:last-child
    max-width: 250px

  .tags
    display: flex
    align-items: center

    .tag
      font-weight: $font-light
      color: $color-gray-4
      padding-left: $space-2
      margin: 0 $space-1
      border: 1px solid $color-gray-7
      border-radius: $space-2

      .et-icon
        svg
          width: 12px
          height: 12px

